# docker-ex-note

./: .gitignore  README.md
base/: .env  Dockerfile  client.py  docker-compose.yaml  server.py
node/my-app/docker/: .dockerignore  docker-compose.yaml
node/serve-ncc/: .dockerignore  Dockerfile  docker-compose.yaml  package.json
node/serve-ncc/src/: main.mjs
node/serve-ncc/src/util/: index.mjs
node/serve-pkg/: README.md  package-lock.json  package.json
node/serve-pkg/src/: index.js
node/serve-pkg/src/util/: index.js
rust-app/app-api/: .dockerignore  Cargo.toml  Dockerfile  README.md  docker-compose.yaml  readme.txt
rust-app/app-api/src/: main.rs  rq.rs
